# TheoMat

./: CMakeLists.txt  README.md
include/: CTheoMat.cuh  CTheoMat.h
src/: CTheoMat.cpp  CTheoMat.cu  CTheoMat.h
test/: Thello.cpp  Toperations.cpp
